--- a/css/_base.sass
+++ b/css/_base.sass
@@ -9,7 +9,6 @@ body
 	flex: 1
 
 .container-fluid
-	max-width: 100%
 	width: 100%
 	margin: 0 auto
 
@@ -30,12 +29,12 @@ ul
 // small to medium screens
 @include media-breakpoint-up(sm)
 	.container-fluid
-		max-width: 90%
+		width: 90%
 
 // medium screens
 @include media-breakpoint-up(md)
 	.container-fluid
-		max-width: 90%
+		width: 90%
 
 // large screens
 @include media-breakpoint-up(lg)
