--- a/css/_base.sass
+++ b/css/_base.sass
@@ -28,15 +28,18 @@ ul
 
 // small to medium screens
 @include media-breakpoint-up(sm)
-	.container-fluid
-		width: 90%
+	.container-fluid,
+	header nav .container-fluid
+		width: 90% !important
 
 // medium screens
 @include media-breakpoint-up(md)
-	.container-fluid
-		width: 90%
+	.container-fluid,
+	header nav .container-fluid
+		width: 90% !important
 
 // large screens
 @include media-breakpoint-up(lg)
-	.container-fluid
+	.container-fluid,
+	header nav .container-fluid
 		max-width: 1500px
