--- a/css/style.sass
+++ b/css/style.sass
@@ -5,7 +5,7 @@
  *	Author: Corneliu Cirlan
  *	Author URI: http://www.corneliucirlan.com
  *	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
- *	Version: 3.6.3
+ *	Version: 3.6.8
  *	Tags: responsive, light, material design, bootstrap framework, framework, sass
  */
 
@@ -34,7 +34,7 @@
 @import 'modules/inputs'
 
 // Pages
-@import 'pages/page-frontpage'
 @import 'pages/page-about'
 @import 'pages/page-contact'
 @import 'pages/single-website'
+@import 'pages/page-single'
