--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -22,6 +22,7 @@ $label-top: calc(50% - 0.5rem)
 
 // Card
 $card-shadow: 0px 20px 50px -20px rgba(0, 0, 0, 0.3)
+$card-cap-bg: transparent
 
 // Facebook
 $facebook: rgba(62, 91, 153, 1)
