--- a/css/pages/_page-single.sass
+++ b/css/pages/_page-single.sass
@@ -1,12 +1,3 @@
-//.page-single
-//    .card
-//        box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.4)
-//
-//        img
-//            width: calc(100% + 2.5rem)
-//            height: auto
-//            margin: 0 -1.25rem
-//
-//        footer
-//            background: $gray-lighter
-//        margin-top: 0
+.page-single
+    .social-icons
+        padding: 0
