--- a/css/modules/_social.sass
+++ b/css/modules/_social.sass
@@ -45,3 +45,68 @@
 
 		&.fa-linkedin
 			color: grayscale($linkedin)
+
+
+.twitter-box
+	position: relative
+
+	.twitter-overlay
+		position: absolute
+		width: 100%
+		height: 50%
+		margin: -10px
+		background: linear-gradient(to bottom, rgba(0, 0, 0, .7) 0%, rgba(0, 0, 0, 0) 100%)
+
+	.wrapper
+		padding: 10px
+
+	.twitter-profile,
+	.twitter-follow-wrapper,
+	.twitter-message-wrapper
+		position: absolute
+		margin: 10px
+		padding: 0
+
+	.twitter-profile
+		margin: 0
+		color: white
+
+		a
+			color: inherit
+
+			&:hover
+				text-decoration: underline
+
+
+		.twitter-profile-image
+			float: left
+			background: white
+			padding: 2px
+			max-width: 54px
+			height: auto
+			margin-right: 4px
+			box-shadow: 0 1px 6px rgba(0, 0, 0, .5)
+
+		.twitter-profile-name,
+		.twitter-profile-followers
+			display: inline-block
+			margin: 0
+			font-weight: 500
+			text-shadow: 0 2px 4px rgba(0, 0, 0, 0.9)
+			line-height: 1.358
+
+		.twitter-profile-name
+			font-size: 18px
+
+		.twitter-profile-followers
+			display: block
+			font-size: 12px
+
+	.twitter-follow-wrapper
+		bottom: 0
+		left: 0
+		margin-bottom: 3px
+
+	.twitter-message-wrapper
+		bottom: 0
+		right: 0
