--- a/style.css
+++ b/style.css
@@ -7672,6 +7672,82 @@ header nav .container-fluid .navbar-toggler:focus {
   color: #6d6d6d;
 }
 
+.twitter-box {
+  position: relative;
+}
+
+.twitter-box .twitter-overlay {
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  margin: -10px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7) 0%, transparent 100%);
+}
+
+.twitter-box .wrapper {
+  padding: 10px;
+}
+
+.twitter-box .twitter-profile,
+.twitter-box .twitter-follow-wrapper,
+.twitter-box .twitter-message-wrapper {
+  position: absolute;
+  margin: 10px;
+  padding: 0;
+}
+
+.twitter-box .twitter-profile {
+  margin: 0;
+  color: white;
+}
+
+.twitter-box .twitter-profile a {
+  color: inherit;
+}
+
+.twitter-box .twitter-profile a:hover {
+  text-decoration: underline;
+}
+
+.twitter-box .twitter-profile .twitter-profile-image {
+  float: left;
+  background: white;
+  padding: 2px;
+  max-width: 54px;
+  height: auto;
+  margin-right: 4px;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
+}
+
+.twitter-box .twitter-profile .twitter-profile-name,
+.twitter-box .twitter-profile .twitter-profile-followers {
+  display: inline-block;
+  margin: 0;
+  font-weight: 500;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.9);
+  line-height: 1.358;
+}
+
+.twitter-box .twitter-profile .twitter-profile-name {
+  font-size: 18px;
+}
+
+.twitter-box .twitter-profile .twitter-profile-followers {
+  display: block;
+  font-size: 12px;
+}
+
+.twitter-box .twitter-follow-wrapper {
+  bottom: 0;
+  left: 0;
+  margin-bottom: 3px;
+}
+
+.twitter-box .twitter-message-wrapper {
+  bottom: 0;
+  right: 0;
+}
+
 .btn {
   border-radius: 0;
   transition: all 0.2s ease-in-out;
