Changed images styles
Modified styles for images to be 100% if bigger than canvas, or natural
size if smaller

--- a/css/pages/_page-single.sass
+++ b/css/pages/_page-single.sass
@@ -1,3 +1,9 @@
 .page-single
     .social-icons
         padding: 0
+
+    .card
+        img
+            display: block
+            margin-left: 50%
+            transform: translateX(-50%)
