--- a/css/_base.sass
+++ b/css/_base.sass
@@ -13,8 +13,8 @@ body
 	margin: 0 auto
 
 img
-	width: 100%
-	height: auto
+	//width: 100%
+	//height: auto
 	transition: all 300ms ease-in-out
 
 	&.hover
