Fixed images sizes

--- a/css/pages/_page-single.sass
+++ b/css/pages/_page-single.sass
@@ -4,6 +4,10 @@
 
     .card
         img
+            max-width: 100%
+            max-width: 100%
+            width: auto
+            height: auto
             display: block
             margin-left: 50%
             transform: translateX(-50%)
