--- a/css/_base.sass
+++ b/css/_base.sass
@@ -41,3 +41,11 @@ ul
 	.container-fluid,
 	header nav .container-fluid
 		max-width: 1500px
+
+// IE 8 - 10
+@media screen\0
+	@import "modules/ie-no-flexbox"
+
+// IE 6 - 7
+@media screen\9
+	@import "modules/ie-no-flexbox"
