--- a/css/pages/_page-contact.sass
+++ b/css/pages/_page-contact.sass
@@ -12,7 +12,7 @@
 				transition: all 300ms ease-in-out
 
 				&:hover
-					transform: scale(1.2) rotate(360deg)
+					transform: scale(1.2)
 
 				&.fa-envelope-o
 					color: $mail
