--- a/style.css
+++ b/style.css
@@ -4312,8 +4312,8 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot?v=4.7.0");
-  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
+  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot");
+  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff?") format("woff2"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff") format("woff"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.ttf") format("truetype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.svg#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
