--- a/src/font-awesome/scss/_path.scss
+++ b/src/font-awesome/scss/_path.scss
@@ -5,7 +5,7 @@
   font-family: 'FontAwesome';
   src: url('#{$fa-font-path}/fontawesome-webfont.eot');
   src: url('#{$fa-font-path}/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),
-    url('#{$fa-font-path}/fontawesome-webfont.woff?') format('woff2'),
+    url('#{$fa-font-path}/fontawesome-webfont.woff') format('woff2'),
     url('#{$fa-font-path}/fontawesome-webfont.woff') format('woff'),
     url('#{$fa-font-path}/fontawesome-webfont.ttf') format('truetype'),
     url('#{$fa-font-path}/fontawesome-webfont.svg#fontawesomeregular') format('svg');
