--- a/style.css
+++ b/style.css
@@ -4313,7 +4313,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 @font-face {
   font-family: 'FontAwesome';
   src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot");
-  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff?") format("woff2"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff") format("woff"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.ttf") format("truetype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.svg#fontawesomeregular") format("svg");
+  src: url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff") format("woff2"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.woff") format("woff"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.ttf") format("truetype"), url("../cornelius/src/font-awesome/fonts/fontawesome-webfont.svg#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
