--- a/css/modules/_buttons.sass
+++ b/css/modules/_buttons.sass
@@ -1,17 +1,6 @@
 .btn
 	border-radius: 0
-	transition: all 0.2s ease-in-out
-
-//.btn-primary
-//	border: none
-//	background-color: $brand-primary
-//	transition: $btn-transition
-//	box-shadow: $btn-box-shadow
-//
-//	&:hover
-//		background-color: $brand-primary
-//		transform: scale(1.2)
-//		box-shadow: $btn-active-box-shadow
+	transition: $social-links-transition
 
 .btn-primary-outline
 	border: $border-width solid $brand-primary
