--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -42,3 +42,14 @@ $github: rgba(51, 51, 51, 1)
 
 // Mail
 $mail: rgba(68, 68, 68, 1)
+
+// Social media
+$social-links: facebook, twitter, google-plus, linkedin
+$social-colors: $facebook, $twitter, $google-plus, $linkedin
+
+// Contact links
+$contact-links: envelope-o, facebook, twitter, google-plus, linkedin, github
+$contact-colors: $mail, $facebook, $twitter, $google-plus, $linkedin, $github
+
+// Social icons transition
+$social-links-transition: all ease-in-out 150ms
