--- a/css/modules/_footer.sass
+++ b/css/modules/_footer.sass
@@ -51,6 +51,13 @@
 			a
 				color: $gray-lighter
 
+				&:hover
+					@each $current in $social-links
+						$i: index($social-links, $current)
+						.fa-#{$current}
+							transition: $social-links-transition
+							color: nth($social-colors, $i)
+
 // small to medium screens
 @include media-breakpoint-up(sm)
 	.footer
