--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  *	Author: Corneliu Cirlan
  *	Author URI: http://www.corneliucirlan.com
  *	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
- *	Version: 3.8
+ *	Version: 3.8.5
  *	Tags: responsive, light, material design, bootstrap framework, framework, sass
  */
 /*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
@@ -7853,65 +7853,86 @@ header nav .container-fluid .navbar-toggler:focus {
   display: -ms-flexbox;
   display: flex;
   padding: 0.75rem 0;
-  text-align: right;
   margin-bottom: 0;
+  color: white;
 }
 
-.social-icons li {
-  -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.social-icons .share-button {
+  width: 25%;
+  text-align: center;
+}
+
+.social-icons .share-button .fa, .social-icons .share-button a {
+  color: inherit;
+  width: 100%;
+  height: 100%;
+  line-height: 1.5;
+  transition: all ease-in-out 150ms;
+}
+
+.social-icons .share-button .fa-facebook {
+  background-color: #3e5b99;
+}
+
+.social-icons .share-button .fa-facebook:hover {
+  background-color: #2f4575;
+}
+
+.social-icons .share-button .fa-twitter {
+  background-color: #1da1f2;
+}
+
+.social-icons .share-button .fa-twitter:hover {
+  background-color: #0c85d0;
+}
+
+.social-icons .share-button .fa-google-plus {
+  background-color: #db4437;
+}
+
+.social-icons .share-button .fa-google-plus:hover {
+  background-color: #bd2e22;
+}
+
+.social-icons .share-button .fa-linkedin {
+  background-color: #1d87bd;
+}
+
+.social-icons .share-button .fa-linkedin:hover {
+  background-color: #166791;
+}
+
+.social-icons .footer-share .fa, .social-icons .footer-share a {
+  padding: 0.5rem 0;
+}
+
+.header-icons li {
+  min-width: 3rem;
+  width: 100%;
   text-align: right;
 }
 
-.social-icons.header-icons li {
-  min-width: 3rem;
+.header-icons li .fa, .header-icons li a {
+  width: 100%;
+  height: 100%;
+  line-height: 1.5;
+  transition: all ease-in-out 150ms;
 }
 
-.fa {
-  transition: all 200ms ease-in-out;
-}
-
-.fa:hover {
-  -webkit-animation: icon-pop 200ms ease-in-out forwards;
-          animation: icon-pop 200ms ease-in-out forwards;
-}
-
-.fa:hover.fa-facebook {
+.header-icons li .fa:hover .fa-facebook, .header-icons li a:hover .fa-facebook {
   color: #3e5b99;
 }
 
-.fa:hover.fa-twitter {
+.header-icons li .fa:hover .fa-twitter, .header-icons li a:hover .fa-twitter {
   color: #1da1f2;
 }
 
-.fa:hover.fa-google-plus {
+.header-icons li .fa:hover .fa-google-plus, .header-icons li a:hover .fa-google-plus {
   color: #db4437;
 }
 
-.fa:hover.fa-linkedin {
+.header-icons li .fa:hover .fa-linkedin, .header-icons li a:hover .fa-linkedin {
   color: #1d87bd;
-}
-
-.fa:hover.fa-3x {
-  -webkit-animation: icon-pop-3x 200ms ease-in-out forwards;
-          animation: icon-pop-3x 200ms ease-in-out forwards;
-}
-
-.fa:hover.fa-3x.fa-facebook {
-  color: #6c6c6c;
-}
-
-.fa:hover.fa-3x.fa-twitter {
-  color: #888888;
-}
-
-.fa:hover.fa-3x.fa-google-plus {
-  color: #898989;
-}
-
-.fa:hover.fa-3x.fa-linkedin {
-  color: #6d6d6d;
 }
 
 .twitter-box {
@@ -7992,7 +8013,7 @@ header nav .container-fluid .navbar-toggler:focus {
 
 .btn {
   border-radius: 0;
-  transition: all 0.2s ease-in-out;
+  transition: all ease-in-out 150ms;
 }
 
 .btn-primary-outline {
@@ -8030,7 +8051,13 @@ header nav .container-fluid .navbar-toggler:focus {
   border: 0;
 }
 
-.card .card-subtitle {
+.card .post-meta {
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
+.card .post-meta .meta-data {
+  color: #dbdace;
   margin-bottom: 1rem;
 }
 
@@ -8063,7 +8090,6 @@ header nav .container-fluid .navbar-toggler:focus {
 .card .post-tags .tags .tag a {
   padding: 0.5rem;
   margin: 0.25rem;
-  line-height: 1.5;
   font-size: 1rem;
   border: 1px solid #444333;
   color: #444333;
@@ -8073,6 +8099,12 @@ header nav .container-fluid .navbar-toggler:focus {
 .card .post-tags .tags .tag a:hover {
   color: white;
   background: #444333;
+}
+
+@media (min-width: 768px) {
+  .card .post-meta .meta-data {
+    margin-bottom: 0;
+  }
 }
 
 .footer {
@@ -8138,6 +8170,26 @@ header nav .container-fluid .navbar-toggler:focus {
 
 .footer .social-icons li a {
   color: #eceeef;
+}
+
+.footer .social-icons li a:hover .fa-facebook {
+  transition: all ease-in-out 150ms;
+  color: #3e5b99;
+}
+
+.footer .social-icons li a:hover .fa-twitter {
+  transition: all ease-in-out 150ms;
+  color: #1da1f2;
+}
+
+.footer .social-icons li a:hover .fa-google-plus {
+  transition: all ease-in-out 150ms;
+  color: #db4437;
+}
+
+.footer .social-icons li a:hover .fa-linkedin {
+  transition: all ease-in-out 150ms;
+  color: #1d87bd;
 }
 
 @media (min-width: 576px) {
@@ -8233,48 +8285,63 @@ header nav .container-fluid .navbar-toggler:focus {
 }
 
 .page-contact .page-contact-social .social-icons .fa {
-  transition: all 300ms ease-in-out;
-}
-
-.page-contact .page-contact-social .social-icons .fa:hover {
-  -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
+  transition: all ease-in-out 150ms;
 }
 
 .page-contact .page-contact-social .social-icons .fa.fa-envelope-o {
   color: #444444;
 }
 
+.page-contact .page-contact-social .social-icons .fa.fa-envelope-o:hover {
+  color: #2b2b2b;
+}
+
 .page-contact .page-contact-social .social-icons .fa.fa-facebook {
   color: #3e5b99;
+}
+
+.page-contact .page-contact-social .social-icons .fa.fa-facebook:hover {
+  color: #2f4575;
 }
 
 .page-contact .page-contact-social .social-icons .fa.fa-twitter {
   color: #1da1f2;
 }
 
+.page-contact .page-contact-social .social-icons .fa.fa-twitter:hover {
+  color: #0c85d0;
+}
+
 .page-contact .page-contact-social .social-icons .fa.fa-google-plus {
   color: #db4437;
 }
 
-.page-contact .page-contact-social .social-icons .fa.fa-github {
-  color: #333333;
+.page-contact .page-contact-social .social-icons .fa.fa-google-plus:hover {
+  color: #bd2e22;
 }
 
 .page-contact .page-contact-social .social-icons .fa.fa-linkedin {
   color: #1d87bd;
 }
 
-.page-contact .page-contact-form .btn {
-  width: 100%;
-  box-shadow: none;
+.page-contact .page-contact-social .social-icons .fa.fa-linkedin:hover {
+  color: #166791;
 }
 
-.page-contact .page-contact-form .btn:hover {
-  -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-          transform: scale(1);
+.page-contact .page-contact-social .social-icons .fa.fa-github {
+  color: #333333;
+}
+
+.page-contact .page-contact-social .social-icons .fa.fa-github:hover {
+  color: #1a1a1a;
+}
+
+.page-contact .page-contact-social .card {
+  margin-top: 1rem;
+}
+
+.page-contact .page-contact-social .btn {
+  width: 100%;
 }
 
 .single-website .card-title {
