--- a/css/modules/_card.sass
+++ b/css/modules/_card.sass
@@ -15,6 +15,10 @@
 	&.card-borderless
 		border: 0
 
+	.card-header .card-title
+		margin: 0
+		text-transform: uppercase
+
 	.post-meta
 		margin-bottom: $spacer-y
 		text-align: left
@@ -28,9 +32,7 @@
 		height: auto
 
 	.post-tags
-		margin-top: $spacer * 2
-		border-top: $border-width solid #ddd
-		padding: $spacer-x 0
+		padding: $card-spacer-x
 
 		.fa-tag
 			color: white
