Removed padding on sidebar column cards

--- a/css/style.sass
+++ b/css/style.sass
@@ -23,6 +23,7 @@
 
 // Modules
 @import 'modules/keyframes'
+@import 'modules/grid'
 @import 'modules/fonts'
 @import 'modules/typography'
 @import 'modules/header'
