--- a/css/_font-awesome.sass
+++ b/css/_font-awesome.sass
@@ -1,6 +1,6 @@
 // Import FA variables
 @import "../bower_components/components-font-awesome/scss/variables"
-$fa-font-path: "../cornelius/bower_components/components-font-awesome/fonts"
+$fa-font-path: "../cornelius/fonts"
 
 
 /*!
