--- a/style.css
+++ b/style.css
@@ -443,7 +443,7 @@ select,
 summary,
 textarea {
   -ms-touch-action: manipulation;
-      touch-action: manipulation;
+  touch-action: manipulation;
 }
 
 table {
@@ -1854,9 +1854,9 @@ select.form-control-lg:not([size]):not([multiple]) {
   vertical-align: middle;
   cursor: pointer;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   border: 1px solid transparent;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -3312,11 +3312,11 @@ input[type="button"].btn-block {
 @media (min-width: 576px) {
   .card-columns {
     -webkit-column-count: 3;
-       -moz-column-count: 3;
-            column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
     -webkit-column-gap: 1.25rem;
-       -moz-column-gap: 1.25rem;
-            column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
   }
   .card-columns .card {
     display: inline-block;
@@ -4489,7 +4489,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
   -webkit-filter: none;
-          filter: none;
+  filter: none;
 }
 
 .fa-stack {
@@ -7360,15 +7360,15 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   min-height: 100vh;
 }
 
 .main-container {
   -webkit-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .container-fluid {
@@ -7382,7 +7382,7 @@ img {
 
 img.hover {
   -webkit-filter: opacity(0.9);
-          filter: opacity(0.9);
+  filter: opacity(0.9);
 }
 
 ul {
@@ -7625,6 +7625,7 @@ pre[class*="language-"] {
   word-wrap: normal;
   line-height: 1.5;
   -moz-tab-size: 4;
+  -o-tab-size: 4;
   tab-size: 4;
   -webkit-hyphens: none;
   -moz-hyphens: none;
@@ -7746,22 +7747,22 @@ pre[class*="language-"] {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-            transform: translateY(0%) scale(1);
+    transform: translateY(0%) scale(1);
   }
   70% {
     opacity: 0.5;
     -webkit-transform: translateY(-500%) scale(0.6);
-            transform: translateY(-500%) scale(0.6);
+    transform: translateY(-500%) scale(0.6);
   }
   71% {
     opacity: 0;
     -webkit-transform: translateY(0%) scale(0.6);
-            transform: translateY(0%) scale(0.6);
+    transform: translateY(0%) scale(0.6);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-            transform: translateY(0%) scale(1);
+    transform: translateY(0%) scale(1);
   }
 }
 
@@ -7769,82 +7770,82 @@ pre[class*="language-"] {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-            transform: translateY(0%) scale(1);
+    transform: translateY(0%) scale(1);
   }
   70% {
     opacity: 0.5;
     -webkit-transform: translateY(-500%) scale(0.6);
-            transform: translateY(-500%) scale(0.6);
+    transform: translateY(-500%) scale(0.6);
   }
   71% {
     opacity: 0;
     -webkit-transform: translateY(0%) scale(0.6);
-            transform: translateY(0%) scale(0.6);
+    transform: translateY(0%) scale(0.6);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-            transform: translateY(0%) scale(1);
+    transform: translateY(0%) scale(1);
   }
 }
 
 @-webkit-keyframes icon-pop {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    transform: scale(1.5);
   }
 }
 
 @keyframes icon-pop {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.5);
-            transform: scale(1.5);
+    transform: scale(1.5);
   }
 }
 
 @-webkit-keyframes icon-pop-3x {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.3);
-            transform: scale(1.3);
+    transform: scale(1.3);
   }
 }
 
 @keyframes icon-pop-3x {
   0% {
     -webkit-transform: scale(1);
-            transform: scale(1);
+    transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-            transform: scale(0.9);
+    transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.3);
-            transform: scale(1.3);
+    transform: scale(1.3);
   }
 }
 
@@ -8000,11 +8001,11 @@ header nav .container-fluid {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-transform: uppercase;
 }
 
@@ -8014,8 +8015,8 @@ header nav .container-fluid .navbar-nav .nav-item a {
 
 header nav .container-fluid .header-icons {
   -webkit-flex: 2;
-      -ms-flex: 2;
-          flex: 2;
+  -ms-flex: 2;
+  flex: 2;
 }
 
 header nav .container-fluid .logo {
@@ -8175,7 +8176,7 @@ header nav .container-fluid .navbar-toggler:focus {
 
 .card .no-animation {
   -webkit-animation: none !important;
-          animation: none !important;
+  animation: none !important;
 }
 
 .card.card-flat {
@@ -8393,8 +8394,8 @@ header nav .container-fluid .navbar-toggler:focus {
   left: 0;
   pointer-events: none;
   -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
   transition: all 300ms ease-in-out;
 }
 
@@ -8420,11 +8421,11 @@ header nav .container-fluid .navbar-toggler:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-around;
-      -ms-flex-pack: distribute;
-          justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .page-contact .page-contact-social .social-icons li {
@@ -8522,8 +8523,8 @@ header nav .container-fluid .navbar-toggler:focus {
   display: block;
   margin-left: 50%;
   -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
