--- a/css/modules/_header.sass
+++ b/css/modules/_header.sass
@@ -24,3 +24,14 @@ header
 
 				&:focus
 					outline: none
+
+.header-overlay
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	background-color: rgba(black, 0)
+	width: 100%
+	min-height: 500px
+	height: 31.25ren
