--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@
  *	Version: 3.9.1
  *	Tags: responsive, light, material design, bootstrap framework, framework, sass
  */
+/*!
+ * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
+ * Copyright 2011-2017 The Bootstrap Authors
+ * Copyright 2011-2017 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 /*! normalize.css v4.2.0 | MIT License | github.com/necolas/normalize.css */
 html {
   font-family: sans-serif;
@@ -443,7 +449,7 @@ select,
 summary,
 textarea {
   -ms-touch-action: manipulation;
-  touch-action: manipulation;
+      touch-action: manipulation;
 }
 
 table {
@@ -1854,9 +1860,9 @@ select.form-control-lg:not([size]):not([multiple]) {
   vertical-align: middle;
   cursor: pointer;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   border: 1px solid transparent;
   padding: 0.5rem 1rem;
   font-size: 1rem;
@@ -3312,11 +3318,11 @@ input[type="button"].btn-block {
 @media (min-width: 576px) {
   .card-columns {
     -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
     -webkit-column-gap: 1.25rem;
-    -moz-column-gap: 1.25rem;
-    column-gap: 1.25rem;
+       -moz-column-gap: 1.25rem;
+            column-gap: 1.25rem;
   }
   .card-columns .card {
     display: inline-block;
@@ -4489,7 +4495,7 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 :root .fa-flip-horizontal,
 :root .fa-flip-vertical {
   -webkit-filter: none;
-  filter: none;
+          filter: none;
 }
 
 .fa-stack {
@@ -7354,21 +7360,20 @@ a.text-gray-dark:focus, a.text-gray-dark:hover {
 }
 
 body {
-  background-color: #f5f5f5;
   text-align: justify;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   min-height: 100vh;
 }
 
 .main-container {
   -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .container-fluid {
@@ -7382,7 +7387,7 @@ img {
 
 img.hover {
   -webkit-filter: opacity(0.9);
-  filter: opacity(0.9);
+          filter: opacity(0.9);
 }
 
 ul {
@@ -7625,7 +7630,6 @@ pre[class*="language-"] {
   word-wrap: normal;
   line-height: 1.5;
   -moz-tab-size: 4;
-  -o-tab-size: 4;
   tab-size: 4;
   -webkit-hyphens: none;
   -moz-hyphens: none;
@@ -7747,22 +7751,22 @@ pre[class*="language-"] {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-    transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
   }
   70% {
     opacity: 0.5;
     -webkit-transform: translateY(-500%) scale(0.6);
-    transform: translateY(-500%) scale(0.6);
+            transform: translateY(-500%) scale(0.6);
   }
   71% {
     opacity: 0;
     -webkit-transform: translateY(0%) scale(0.6);
-    transform: translateY(0%) scale(0.6);
+            transform: translateY(0%) scale(0.6);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-    transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
   }
 }
 
@@ -7770,82 +7774,82 @@ pre[class*="language-"] {
   0% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-    transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
   }
   70% {
     opacity: 0.5;
     -webkit-transform: translateY(-500%) scale(0.6);
-    transform: translateY(-500%) scale(0.6);
+            transform: translateY(-500%) scale(0.6);
   }
   71% {
     opacity: 0;
     -webkit-transform: translateY(0%) scale(0.6);
-    transform: translateY(0%) scale(0.6);
+            transform: translateY(0%) scale(0.6);
   }
   100% {
     opacity: 1;
     -webkit-transform: translateY(0%) scale(1);
-    transform: translateY(0%) scale(1);
+            transform: translateY(0%) scale(1);
   }
 }
 
 @-webkit-keyframes icon-pop {
   0% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+            transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+            transform: scale(1.5);
   }
 }
 
 @keyframes icon-pop {
   0% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+            transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.5);
-    transform: scale(1.5);
+            transform: scale(1.5);
   }
 }
 
 @-webkit-keyframes icon-pop-3x {
   0% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+            transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+            transform: scale(1.3);
   }
 }
 
 @keyframes icon-pop-3x {
   0% {
     -webkit-transform: scale(1);
-    transform: scale(1);
+            transform: scale(1);
   }
   30% {
     -webkit-transform: scale(0.9);
-    transform: scale(0.9);
+            transform: scale(0.9);
   }
   100% {
     -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+            transform: scale(1.3);
   }
 }
 
@@ -8001,11 +8005,11 @@ header nav .container-fluid {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
 }
 
@@ -8015,8 +8019,8 @@ header nav .container-fluid .navbar-nav .nav-item a {
 
 header nav .container-fluid .header-icons {
   -webkit-flex: 2;
-  -ms-flex: 2;
-  flex: 2;
+      -ms-flex: 2;
+          flex: 2;
 }
 
 header nav .container-fluid .logo {
@@ -8033,6 +8037,18 @@ header nav .container-fluid .navbar-toggler {
 
 header nav .container-fluid .navbar-toggler:focus {
   outline: none;
+}
+
+.header-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: transparent;
+  width: 100%;
+  min-height: 500px;
+  height: 31.25ren;
 }
 
 .breadcrumbs-container {
@@ -8176,7 +8192,7 @@ header nav .container-fluid .navbar-toggler:focus {
 
 .card .no-animation {
   -webkit-animation: none !important;
-  animation: none !important;
+          animation: none !important;
 }
 
 .card.card-flat {
@@ -8394,8 +8410,8 @@ header nav .container-fluid .navbar-toggler:focus {
   left: 0;
   pointer-events: none;
   -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
   transition: all 300ms ease-in-out;
 }
 
@@ -8421,11 +8437,11 @@ header nav .container-fluid .navbar-toggler:focus {
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
   -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
 }
 
 .page-contact .page-contact-social .social-icons li {
@@ -8523,8 +8539,8 @@ header nav .container-fluid .navbar-toggler:focus {
   display: block;
   margin-left: 50%;
   -webkit-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 /*# sourceMappingURL=style.css.map */
