Updated portfolio page

--- a/css/modules/_buttons.sass
+++ b/css/modules/_buttons.sass
@@ -1,6 +1,8 @@
 .btn
 	border-radius: 0
 	transition: $social-links-transition
+	margin-bottom: $spacer
+	cursor: pointer
 
 .btn-primary-outline
 	border: $border-width solid $brand-primary
