--- a/css/modules/_card.sass
+++ b/css/modules/_card.sass
@@ -1,9 +1,8 @@
 .card-wrapper, .card-deck-wrapper
-	margin-bottom: $spacer-y
+	margin-bottom: $spacer-y * 1.75
 
 .card
 	box-shadow: $card-shadow
-	overflow: hidden
 
 	.no-animation
 		animation: none !important
