--- a/css/_variables.sass
+++ b/css/_variables.sass
@@ -1,3 +1,6 @@
+// Content max width
+$content-max-width: 1500px
+
 // Colors
 $brand-primary: rgba(61, 150, 203, 1)
 $brand-inverse: #444333
@@ -8,7 +11,7 @@ $btn-primary-bg: $brand-primary
 $btn-primary-border: $brand-primary
 $btn-box-shadow: 0px 15px 10px -10px rgba(black, 0.2)
 $btn-active-box-shadow: 0px 25px 15px -15px rgba(black, 0.3)
-$btn-transition: all 200ms cubic-bezier(0.25, 0.39, 0.39, 2.01);
+$btn-transition: all 200ms cubic-bezier(0.25, 0.39, 0.39, 2.01)
 
 // Navbar
 $navbar-light-color: $body-color
