--- a/css/style.sass
+++ b/css/style.sass
@@ -5,7 +5,7 @@
  *	Author: Corneliu Cirlan
  *	Author URI: http://www.corneliucirlan.com
  *	GitHub Theme URI: https://github.com/corneliucirlan/cornelius
- *	Version: 3.10.3
+ *	Version: 3.11
  *	Tags: responsive, light, material design, bootstrap framework, framework, sass
  */
 
@@ -36,6 +36,7 @@
 @import "components/social"
 @import "components/buttons"
 @import "components/inputs"
+@import "components/tags"
 
 // Pages
 @import "pages/page-about"
