--- a/src/css/_variables.sass
+++ b/src/css/_variables.sass
@@ -924,8 +924,17 @@ $linkedin: rgba(29, 135, 189, 1)
 // Github
 $github: rgba(51, 51, 51, 1)
 
+// Pinterest color
+$pinterest: rgba(189, 8, 28, 1)
+
+// Reddit color
+$reddit: rgba(95, 153, 207, 1)
+
 // Mail
 $mail: rgba(68, 68, 68, 1)
+
+// Profiles array
+$socialProfiles: ("facebook": $facebook, "instagram": $instagram, "twitter": $twitter, "google-plus": $google-plus, "linkedin": $linkedin, "pinterest": $pinterest, "reddit": $reddit, "github": $github, "mail": $mail)
 
 // Social media
 $social-links: facebook, instagram, twitter, google-plus, linkedin
